<resources>
    <string name="app_name">Palindromo</string>
    <string name="action_about_us">Sobre Nosotros</string>
    <!-- Strings used for fragments for navigation -->
    <string name="inicio_fragment_label">Palindromo</string>
    <string name="second_fragment_label">Regresar</string>
    <string name="comprobar">Comprobar</string>
    <string name="volver">De nuevo</string>

    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="fragment_inicio_et_hint">Frase o Palabra</string>
    <string name="fragment_inicio_text_view">Escribe una palabra o frase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="umg_logo">UMG Logo</string>
    <string name="student_1_fragment">Nombre y Apellido - 5090-xx-xxxxx</string>
    <string name="group_fragment_about">Aplicación creada por:</string>
</resources>