<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".aboutUsFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/umg_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/umg_logo" />

    <TextView
        android:id="@+id/textViewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_fragment_about"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textViewStudent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_1_fragment"
        android:textAllCaps="true"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGroup"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textViewStudent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_1_fragment"
        android:textAllCaps="true"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStudent1"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textViewStudent3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_1_fragment"
        android:textAllCaps="true"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStudent2"
        android:gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>